--- a/Protein Folding/example.ipynb
+++ b/Protein Folding/example.ipynb
@@ -44,15 +44,15 @@
     "logging.getLogger('botocore').setLevel(logging.CRITICAL)\n",
     "logging.getLogger('urllib3').setLevel(logging.CRITICAL)\n",
     "\n",
-    "# Enter your API Key Here\n",
+    "# Enter your API key here\n",
     "# Obtain your API key by contacting --> support@infinityq.tech\n",
     "# Example: TITANQ_DEV_API_KEY = \"00000000-0000-0000-0000-000000000000\"\n",
     "TITANQ_DEV_API_KEY = None\n",
     "\n",
     "# Specify AWS keys and bucket name for solving very large problems\n",
-    "# AWS_ACCESS_KEY = \"Your Access key\"\n",
-    "# AWS_SECRET_ACCESS_KEY = \"Your secret access key\"\n",
-    "# AWS_BUCKET_NAME = \"Your bucket name\""
+    "# AWS_ACCESS_KEY = \"Access Key\"\n",
+    "# AWS_SECRET_ACCESS_KEY = \"Secret Access Key\"\n",
+    "# AWS_BUCKET_NAME = \"Bucket Name\""
    ]
   },
   {
@@ -286,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
